--- a/src/login_template/Login.module.css
+++ b/src/login_template/Login.module.css
@@ -41,13 +41,16 @@
 .registerPrompt
 {
   composes: button from './Button.module.css';
+  border: 3px outset #6c9980;
+  background-color: #6c9980;
+  color: white;
   display: block; 
-  font-size: 50%;
-  font-style: italic; 
+  font-size: 60%;
   height: 30px;
-  margin-top: 20px;
-  margin-left: auto; 
-  margin-right: auto; 
+  margin-top: 10px;
+  padding-top: 6px;
+  padding-left: 30px; 
+  padding-right: 30px;
 }
 
 .bodyFamily 
@@ -61,7 +64,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/happy-multiracial-families-taking-selfie-beach-making-funny-faces-happy-multiracial-families-taking-selfie-beach-making-128444185.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/Grizzly InternNET Background.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
