--- a/src/login_template/Login.module.css
+++ b/src/login_template/Login.module.css
@@ -53,7 +53,7 @@
   padding-right: 30px;
 }
 
-.bodyFamily 
+.bodyLogIn
 {
   background-color: white;
   height: 70vh;
@@ -64,7 +64,25 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/Grizzly InternNET Background.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/Grizzly InternNET Background 1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 20vh; 
+}
+
+.bodySignUp
+{
+  background-color: white;
+  height: 70vh;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/Grizzly InternNET Background 2.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
