Directory Update: Migrated images directory out of login-template folder. Updated images references in associated CSS module files. Composes statements in the registration and login CSS modules were also updated to point to directory of newly-moved button styles.

--- a/src/page_specific_components/public_pages/signup/Registration.module.css
+++ b/src/page_specific_components/public_pages/signup/Registration.module.css
@@ -33,7 +33,7 @@
 }
 
 .registrationButton{
-    composes: button from './Button.module.css';
+    composes: button from '../../../shared_site_css/button_styles/Button.module.css';
     font-size: 70%;
     height: 50px;
     width: 200px;
