--- a/src/page_specific_components/public_pages/login_portal/Login.module.css
+++ b/src/page_specific_components/public_pages/login_portal/Login.module.css
@@ -31,7 +31,7 @@
 
 .loginButton
 {
-  composes: button from './Button.module.css';
+  composes: button from '../../../shared_site_css/button_styles/Button.module.css';
   font-size: 80%;
   height: 50px;
   width: 150px;
@@ -40,7 +40,7 @@
 
 .registerPrompt
 {
-  composes: button from './Button.module.css';
+  composes: button from '../../../shared_site_css/button_styles/Button.module.css';
   border: 3px outset #6c9980;
   background-color: #6c9980;
   color: white;
@@ -64,7 +64,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/Grizzly InternNET Background 1.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("../../../shared_site_css/images/Grizzly InternNET Background 1.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -82,7 +82,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/Grizzly InternNET Background 2.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("../../../shared_site_css/images/Grizzly InternNET Background 2.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
