--- a/src/page_specific_components/public_pages/login_portal/Login.module.css
+++ b/src/page_specific_components/public_pages/login_portal/Login.module.css
@@ -64,25 +64,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("../../../shared_site_css/images/Grizzly InternNET Background 1.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding-top: 20vh; 
-}
-
-.bodySignUp
-{
-  background-color: white;
-  height: 70vh;
-  min-width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("../../../shared_site_css/images/Grizzly InternNET Background 2.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("../../../images/Grizzly InternNET Background 1.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
