Navbar Fixes: Modified navbar of internal pages so that all internal pages have the same links.

--- a/src/shared_site_components/page-header/header-and-navebar.module.css
+++ b/src/shared_site_components/page-header/header-and-navebar.module.css
@@ -23,10 +23,11 @@
     display: inline-block;
     border: 3px outset #176748;
     background-color: #176748;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
     padding-top: 2%;
     padding-bottom: 2%;
+    margin-top: 1%;
     margin-right: 5%;
     border-radius: 15px;
   }
