--- a/src/page_specific_components/private_pages/main_forum_feed/main-feed.module.css
+++ b/src/page_specific_components/private_pages/main_forum_feed/main-feed.module.css
@@ -53,20 +53,46 @@
   padding-right: 30px;
 }
 
-.bodyLogIn
+.bodyMain
 {
-  background-color: white;
-  height: 71vh;
-  min-width: 100%;
+  background-color: #a2a2a2;
+  height: 140vh;
+  width: 100%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("../../../images/Grizzly InternNET Background 1.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
-  
+
+.bodyInput
+{
+  border: 2px;
+  border-style: dashed;
+  width: 60%;
+}
+
+.bodyProfile
+{
+  float: left;
+  border: 2px;
+  border-style: double;
+  background-color:#c2c2c2;
+  width: 20%;
+}
+
+.bodyPostList
+{
+  border: 3px;
+  border: double;
+  width: 60%;
+  background-color: #dadada;
+}
+
+.PostListItem
+{
+  border: 3px;
+  border-style: double;
+}
