--- a/src/shared_site_css/body_styles/internal-body.module.css
+++ b/src/shared_site_css/body_styles/internal-body.module.css
@@ -24,8 +24,8 @@
     background-repeat: repeat-y;
     background-position: center;
     background-size: cover;
-    height: 70vh;
-    width: 100%;
+    height: auto;
+    width: 100;
     display: flex;
     flex-direction: column;
     align-items: center;
