--- a/src/shared_site_css/body_styles/internal-body.module.css
+++ b/src/shared_site_css/body_styles/internal-body.module.css
@@ -35,6 +35,21 @@
     margin-top: 10px;
 }
 
+.profileBody{
+    background-color: white;
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: black;
+    padding-top: 20vh;
+    margin-top: 10px;
+    margin-bottom: 250px;
+}
+
 .ScrollingContent
 {
     display: flex;
