--- a/src/shared_site_css/body_styles/internal-body.module.css
+++ b/src/shared_site_css/body_styles/internal-body.module.css
@@ -15,6 +15,8 @@
     align-items: center;
     color: black;
     font-size: calc(10px + 2vmin);
+    height: auto;
+    width: 100%;
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -25,7 +27,7 @@
     background-position: center;
     background-size: cover;
     height: auto;
-    width: 100;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
